<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.med_manager.NewMedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEBEE"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Medication Form"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_message"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/med_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/med_name_hint"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_desc"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/med_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/med_desc_hint"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_freq_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_freq"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/freq_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/freq_array"
            android:prompt="@string/hours"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_start_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_start"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_set_start"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/set_med_start"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="#D50000"/>

        <TextView
            android:id="@+id/med_end_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_end"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_set_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_med_end"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:background="#D50000"/>

        <Button
            android:id="@+id/btn_add_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:text="@string/add_med"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="#F44336"/>
    </LinearLayout>

</ScrollView>
