<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.android.med_manager.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEBEE"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medication"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#FFAB40"
            android:layout_margin="24dp"/>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/freq_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_med_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="#F44336"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/take_drug" />

        <Button
            android:id="@+id/btn_med_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="#F44336"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/back" />

        <TextView
            android:id="@+id/end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/last_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>

</ScrollView>
